# pathshala_lib_api

./: README.md  pyproject.toml  requirements.txt
src/: main.py
src/configs/: settings.py
src/database/: core.py
src/modals/: book.py  book_copy.py  book_issue.py  payment.py  reminder.py  role.py  user.py  user_document.py
src/routes/: api.py  auth.py
src/schemas/: auth.py  role.py  user.py
