[project]
name = "pathshala-lib-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "dotenv>=0.9.9",
    "fastapi>=0.119.0",
    "pydantic[email]>=2.12.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]
